Moved to the top button all the way to the right of the viewport to avoid overlap with information in containers.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -109,7 +109,7 @@ blockquote {
   display: none; /* Hidden by default */
   position: fixed; /* Fixed/sticky position */
   bottom: 0px; /* Place the button at the bottom of the page */
-  right: calc(50vw - 25px); 
+  right: calc(0px); 
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
